deleted luggagePosition.java and added som code in all activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_about">aboutActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_p_position">pPosition</string>
 </resources>
